Fix header text align

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <ion-app>
         <ion-content [scrollEvents]="true" (ionScrollStart)="logScrollStart()" (ionScroll)="logScrolling(event)" (ionScrollEnd)="logScrollEnd()">
             <ion-header>
-                <ion-toolbar color="primary"> 
-                    <ion-title>Course Rating</ion-title> </ion-toolbar>
+                <ion-toolbar  class="ion-text-center" color="primary"> 
+                    <ion-title  text-center>Course Rating</ion-title> </ion-toolbar>
             </ion-header>
             <ion-grid fixed>
                 <ion-row>
