--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ion-content [scrollEvents]="true" (ionScrollStart)="logScrollStart()" (ionScroll)="logScrolling(event)" (ionScrollEnd)="logScrollEnd()">
             <ion-header>
                 <ion-toolbar  class="ion-text-center" color="primary"> 
-                    <ion-title  text-center>Course Rating</ion-title> </ion-toolbar>
+                    <ion-title  >Course Rating</ion-title> </ion-toolbar>
             </ion-header>
             <ion-grid fixed>
                 <ion-row>
